<resources>
    <string name="app_name">HApp</string>
    <string name="prev_button_text">Prev</string>
    <string name="next_button_text">Next</string>
    <string name="facebook_app_id">976139756151981</string>
    <string name="fb_login_protocol_scheme">fb976139756151981</string>
    <string name="processing_video">Processing Video</string>
    <string name="processing_complete">Processing Complete</string>
    <string name="error_occurred">Error occurred</string>
    <string name="reason_is">"Reason : "</string>
    <string name="try_again">Try again</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="change_language">Change Language</string>
    <string name="apply">Apply</string>
    <string name="notification_dialog_body">You won\'t receive any notifications if you turn this setting off.</string>
    <string name="turn_off">Turn Off</string>
    <string name="cancel">Cancel</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_confirmation">Are you sure you want to sign out ?</string>
    <string name="no">No</string>
    <string name="erase_dialog_body">Are you sure you want to remove all history and content from HApp?</string>
    <string name="remove_all">Remove All</string>
    <string name="history">History</string>
    <string name="share_app_description">\"Hey check out this memes app at: \"</string>
    <string name="share_app_title">Share App!</string>
    <string name="storage_denied_msg">Storage access is needed to process your photos and save them in storage.</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="server_err_msg">Server error try again later</string>
    <string name="app_err_msg">Application error try again.</string>
    <string name="conn_err_msg">Connection error check your connection and try again.</string>
    <string name="no_sound_selected">No sound selected.</string>
    <string name="close_activity">Close Activity</string>
    <string name="app_logo">App logo</string>
    <string name="hdarha_motion_memes">Hdarha Motion Memes</string>
    <string name="get_started_with">Get started with</string>
    <string name="or">Or</string>
    <string name="by_continuing_i_have_read_and_agreed_to_the">By continuing I have read and agreed to the</string>
    <string name="terms_of_service_and_privacy_policy">Terms of Service and Privacy Policy</string>
    <string name="loading_voices">Loading voices…</string>
    <string name="loading_video">Loading Video…</string>
    <string name="share">Share</string>
    <string name="profile_image">Profile Image</string>
    <string name="me">Me</string>
    <string name="profile_name">Profile Name</string>
    <string name="credits">Credits</string>
    <string name="memes">Memes</string>
    <string name="empty_history">Empty History</string>
    <string name="empty_list">Empty list</string>
    <string name="banner">Banner</string>
    <string name="toolbar_icon">Toolbar icon</string>
    <string name="select_sound">Select Sound</string>
    <string name="shuffle_voices">Shuffle voices</string>
    <string name="gallery_image">Gallery image</string>
    <string name="dialog_image">Dialog Image</string>
    <string name="got_it">Got it</string>
    <string name="dialog_icon">Dialog icon</string>
    <string name="enter">enter</string>
    <string name="push_notification">Push Notification</string>
    <string name="contact_us">Contact us</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="twitter">twitter</string>
    <string name="email">email</string>
    <string name="erase_all_content">Erase all content</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="saved">Saved</string>
    <string name="thumbnail">thumbnail</string>
    <string name="generate">Generate</string>
    <string name="my_videos">My Videos</string>
    <string name="sound_library">Sound Library</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="date">Date</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="_00_00">00:00</string>
    <string name="video_downloaded">Video downloaded.</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="delete_video">Delete Video</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Are you sure you want to delete this video?"</string>
    <string name="no_videos_created_yet">No videos created yet.</string>


</resources>
