<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="40dp"
    android:background="@drawable/layout_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_check_circle_black_24dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/saved"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/shareImageView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/thumbnail"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1  "
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="0  "
            android:text="@string/share" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:autoSizeTextType="uniform"
            app:icon="@drawable/ic_facebook"
            app:iconPadding="4dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/instagram"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:icon="@drawable/ic_instagram"
            app:iconPadding="4dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>