<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/TopLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        app:civ_border_color="@android:color/white"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/signInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_weight="1"
        android:padding="3dp"
        android:text="@string/please_sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/creditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_weight="0"
        android:background="#3F51B5"
        android:padding="@dimen/_2sdp"
        android:text="@string/credits"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/creditNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

    <Button
        android:id="@+id/homeShareBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_weight="0"
        android:backgroundTint="#00BCD4"
        android:minWidth="@dimen/_50sdp"
        android:minHeight="@dimen/_38ssp"
        android:shadowColor="#000000"
        android:text="@string/share"
        android:textSize="@dimen/_8ssp"
        android:visibility="visible"
        app:icon="@drawable/ic_share_white_50dp"
        app:iconSize="@dimen/_8sdp" />

</LinearLayout>