<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mHeaderLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/mHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profileLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/_18sdp"
        android:visibility="visible">

        <TextView
            android:id="@+id/me_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/me"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImageView"
            android:layout_width="@dimen/_50ssp"
            android:layout_height="@dimen/_50ssp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_11sdp"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/displayNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:drawableStart="@drawable/ic_facebook_brand"
            android:drawablePadding="5dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/profile_name"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCredit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/point_textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/credits"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCreations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text=""
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/number_textview2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/memes"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>