<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/setting1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textLanguageSetting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_translate_black_24dp"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/enter"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_gray_24dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/setting2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_survey"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text="@string/feedback"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/enter"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_gray_24dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/setting3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_notifications_none_black_24dp"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text="@string/push_notification"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

                <Switch
                    android:id="@+id/switchPushNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:visibility="invisible" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/setting4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textContactUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_headset_mic_black_24dp"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text="@string/contact_us"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageFacebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/facebook"
                        android:cropToPadding="false"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:tint="@android:color/darker_gray"
                        app:srcCompat="@drawable/ic_facebook" />

                    <ImageView
                        android:id="@+id/imageInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/instagram"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:tint="@android:color/darker_gray"
                        app:srcCompat="@drawable/ic_instagram" />

                    <ImageView
                        android:id="@+id/imageTwitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/twitter"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:tint="@android:color/darker_gray"
                        app:srcCompat="@drawable/ic_twitter" />

                    <ImageView
                        android:id="@+id/imageEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/email"
                        android:paddingStart="2dp"
                        android:paddingEnd="2dp"
                        android:tint="@android:color/darker_gray"
                        app:srcCompat="@drawable/ic_arroba" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/setting5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textErase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_eraser"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text="@string/erase_all_content"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/setting6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textTOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_lightbulb_outline_black_24dp"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text="@string/terms_of_service"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/enter"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_gray_24dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/setting7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_14sdp">

                <TextView
                    android:id="@+id/textAboutUs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_info_outline_black_24dp"
                    android:drawablePadding="@dimen/_7ssp"
                    android:text="@string/about_us"
                    android:textColor="#000000"
                    android:textSize="@dimen/_14ssp"
                    app:drawableTint="#D32F2F" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:contentDescription="@string/enter"
                    app:srcCompat="@drawable/ic_keyboard_arrow_right_gray_24dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>